plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.morningstar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	compileOnly 'org.projectlombok:lombok'

	// mysql connector
	runtimeOnly 'com.mysql:mysql-connector-j'

	// testcontainers
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mysql'

	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'

	// yml
	implementation 'org.yaml:snakeyaml:+'

	// dotenv-java
	implementation 'io.github.cdimascio:java-dotenv:+'

	// aws S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//oauth
	implementation("org.springframework.boot:spring-boot-starter-oauth2-client")

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// httpclient5
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'org.apache.httpcomponents.core5:httpcore5'

	//mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//webclient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//jsoup
	implementation 'org.jsoup:jsoup:1.17.2'

	// 1) Spring AI
	implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.0.1'
	implementation 'com.openai:openai-java:3.0.2'

	// Document parsing libraries
	implementation 'org.apache.pdfbox:pdfbox:2.0.31'
	implementation 'org.apache.poi:poi:5.2.4'
	implementation 'org.apache.poi:poi-ooxml:5.2.4'
	implementation 'org.apache.poi:poi-scratchpad:5.2.4'

	// OpenAI 모델 스타터(챗/임베딩/오디오)
	implementation "org.springframework.ai:spring-ai-starter-model-openai"

	// 벡터DB: Chroma
//	implementation "org.springframework.ai:spring-ai-starter-vector-store-chroma"

	// tts
	implementation(platform("com.google.cloud:libraries-bom:26.50.0"))
	implementation("com.google.cloud:google-cloud-texttospeech")

	// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	//MockMultipartFile
	implementation 'org.springframework:spring-test'

	// tika
	implementation 'org.apache.tika:tika-core:2.9.2'
	implementation 'org.apache.tika:tika-parsers-standard-package:2.9.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
